--- a/Vlog/appsettings.json
+++ b/Vlog/appsettings.json
@@ -18,5 +18,10 @@
       "Password": "123abcMetnah",
       "DBName": "vlog"
     }
+  },
+  "RajaOngkir": {
+    "Url" :  "https://api.rajaongkir.com",
+    "ApiKey": "be0c4bef5e3cdce07f99dd57222d710a",
+    "Mode": "starter"
   }
 }
