--- a/Vlog/appsettings.json
+++ b/Vlog/appsettings.json
@@ -20,8 +20,11 @@
     }
   },
   "RajaOngkir": {
-    "Url" :  "https://api.rajaongkir.com",
+    "Url": "https://api.rajaongkir.com",
     "ApiKey": "be0c4bef5e3cdce07f99dd57222d710a",
-    "Mode": "starter"
+    "Mode": "starter",
+    "DefaultCourier": "jne",
+    "DefaultService": "REG"
+
   }
 }
